K8S/whoami/whoami-ns.yml
apiVersion: "v1"
kind: "Namespace"
metadata:
  name: "whoami"
  labels:
    istio-injection: "enabled"
