K8S/whoami/whoami-deploy.yml
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  namespace: "whoami"
  name: "whoami"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: "whoami"
  template:
    metadata:
      labels:
        app.kubernetes.io/name: "whoami"
    spec:
      containers:
        - name: "whoami"
          image: "traefik/whoami:latest"
          imagePullPolicy: "IfNotPresent"
          args:
            - "-port=4000"
          ports:
            - name: "http"
              protocol: "TCP"
              containerPort: 4000
          resources:
            requests:
              cpu: "10m"
              memory: "10Mi"
            limits:
              cpu: "10m"
              memory: "20Mi"
