K8S/whoami/whoami-service.yml
apiVersion: "v1"
kind: "Service"
metadata:
  namespace: "default"
  name: "whoami"
spec:
  type: "LoadBalancer"
  selector:
    app.kubernetes.io/name: "whoami"
  ports:
    - name: "http"
      protocol: "TCP"
      port: 4000
      targetPort: 4000
