K8S/whoami/ingress-istio.yml
apiVersion: "networking.k8s.io/v1"
kind: "Ingress"
metadata:
  namespace: "testing"
  name: "whoami"
spec:
  ingressClassName: "istio"
  rules:
    - host: "testing.k3s"
      http:
        paths:
          - path: "/"
            pathType: "Prefix"
            backend:
              service:
                name: "whoami"
                port:
                  number: 4000
